# agent-dev-environment

./: .gitignore  ISSUES.md  LICENSE  PLANS.md  README.md  REQUIREMENTS.md  config.toml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr_validation.yml
config/: policy.toml
config/presets/: AGENTS.md  GEMINI.md  agents_template.md  config.example.toml  eslintrc.json  llm.txt  ruff.toml
config/templates/: AGENTS.md  GEMINI.md  ISSUES.md  PLANS.md  REQUIREMENTS.md  config.toml  llm.txt  pyproject.toml
docs/: HOWTO_UseAgentDev.md  architecture.md
docs/assets/diagrams/: project_layout.dot  validate_workflow.dot
docs/assets/images/: architecture.dot
docs/features/: project_automate_1099.md  project_automation.md
tests/: conftest.py  test_configurations.py  test_create_project.py  test_diagram_convention.py  test_document.py  test_document_generation.py  test_project_history.py  test_version.py
workflows/: architecture-ade.md  commit_ade.md  css-review.md  documentation-ade.md  license-compliance-ade.md  project-history-ade.md  publish-ade.md  refactor-frontend-component.md  requirements-management-ade.md  safe-css-ade.md  security-review-ade.md  triage-and-fix-loop-ade.md  ux-review-ade.md  workday-ade.md
workflows/core/: docs-path-integrity.md  validate.md
