[project]
name = "agent-dev-environment"
version = "0.0.3"
description = "Tooling and workflows for Agentic Development"
authors = [
    { name = "MyHeadwave LLC" },
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-testmon>=2.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "tomli>=2.0.0",
]

[dependency-groups]
dev = []
